# ccodegraph

./: .gitignore  CHANGELOG.md  README.en.md  README.md  ccodegraph.py  idealgraph.py  pyproject.toml
.github/workflows/: ci.yml
assets/: THIRD_PARTY.md  viz_template.html
docs/: design.md  query-layer-design.md  requirement.md  traceability.md
docs/outreach/: README.md  cscope-306-reply.md  cscope-upstream-issue.md  hn.md  lobsters.md  reddit-claudecode.md  reddit-cprogramming.md  render_lsp_trilogy.py
docs/research/: benchmark-methodology.md  clink.md  cscope-query-engine-bugs.md  llm-ab-v2-hard-cases.md  llm-ab-v3-full-suite.md  llm-ab-v4-token-efficiency.md  llm-ab-v5-linux-kernel.md  llm-ab-v6-lsp.md  llm-ab-v7-edit-loop.md  llm-ab-v7-plan.md  llm-ab-v8-plan.md  llm-ab-v8-slow-build.md  llm-ab.md  lsp-external-evidence.md  teaching-layer-methodology.md  token-spike.md
docs/research/hard-benchmark/: gt_WRQ-001.md  gt_WRQ-002.md  gt_WRQ-003.md  gt_WRQ-004.md  gt_WRQ-005.md  gt_WRQ-006.md  gt_WRQ-007.md  gt_WRQ-010.md  gt_WRQ-011.md  gt_WRQ-012.md  gt_WRQ-014.md  gt_WRQ-015.md  gt_WRQ-016.md  gt_WRQ-018.md  gt_WRQ-019.md  gt_WRQ-020.md  gt_WRQ-021.md  gt_WRQ-022.md  gt_case1_driver_ops.txt  gt_case2_set_chain.md  gt_case4_lifecycle.md  questions.jsonl  questions.md  taxonomy.md
docs/reviews/: 2026-07-05-codex-docs-round2.md  2026-07-05-codex-redteam.md  2026-07-05-codex-skill-round3.md  2026-07-06-codex-status-round4.md
skills/ccodegraph/: SKILL.md
tests/e2e/: test_cli.py
tests/fixtures/miniproj/: alt_init.c  caller.c  (+8 more)
tests/integration/: test_build.py
tests/unit/: test_core.py  test_crossref.py  test_cscope_worker.py  test_limits.py
tools/: embed_skill.py  run_hard_ab.py  run_hard_ab_armc.py  run_hard_ab_thirdparty.py  run_hard_ab_v3.py  run_hard_ab_v6.py  run_kernel_bench.py
(+1200 files in other folders)
