[project]
name = "idealgraph"
version = "0.1.0"
description = "理想 C 知識圖譜:多引擎分層填料、標注 origin/confidence"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["idealgraph.py"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
