[project]
name = "ccodegraph"
version = "0.0.3"
description = "ccodegraph:C/C++ 知識圖譜——整合 ctags/cscope/tree-sitter/clangd,多引擎分層填料、標注 origin/confidence"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["ccodegraph.py"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
